@@ -13,6 +13,7 @@
 	all : fixed inlining of `haxe.DynamicAccess.keyValueIterator` (#10118)
 	analyzer : fixed side effect handling for enums (#10032)
 	cpp : fixed handling of `cpp.ConstCharStar` with analyzer enabled (#9733)
+	php : fixed failure with trailing slash in output dir (#6212)
 
 2021-02-09 4.2.0:
 
